# probabl_draft

./: .gitignore  Readme.md
Image_Classification_with_scikit_learn/: Image_Classification_with_scikit_learn.ipynb
pcr_vc_pls/: plot_pcr_vs_pls.ipynb  plot_pcr_vs_pls_bundle.ipynb  plot_pcr_vs_pls_ipywidgets.ipynb
scatter/: Readme.md  pyproject.toml  scatter_bundle_app.py  scatter_bundle_app_minimal.py  scatter_fiatlight.py  scatter_notebook_bundle.ipynb  scatter_notebook_fiatlight.ipynb  scatter_notebook_ipywidgets.ipynb
scatter/fiat_settings/: example_app.fiat_user.json  example_app.ini  example_app.node_editor.json  plot_boundary.fiat_user.json  plot_boundary.ini  plot_boundary.node_editor.json  scatter_fiatlight.fiat_user.json  scatter_fiatlight.ini  scatter_fiatlight.node_editor.json  scatter_source.fiat_user.json  scatter_source.ini  slow_plot_boundary.fiat_user.json  slow_plot_boundary.ini  slow_plot_boundary.node_editor.json  store_scatter_as_global.fiat_user.json  store_scatter_as_global.ini  store_scatter_as_global.node_editor.json
scatter/saved_states/: flowers_nb.fiat_user.json  land_and_sea_nb.fiat_user.json
scatter/scatter_widget_bundle/: __init__.py  coordinate_transformer.py  scatter_data.py  scatter_presenter.py  scatter_with_gui.py
