[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scatter_widget_bundle"
version = "0.1.0"
authors = [{ name = "Pascal Thomet", email = "pthomet@gmail.com" }]
description = "Just a scatter widget, using imgui-bundle and fiatlight"
readme = "Readme.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
keywords = ["python"]

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["scatter_widget_bundle"]

[project.urls]
# homepage = "https://pthom.github.io/fiatlight/"
#repository = "https://github.com/pthom/fiatlight/"
#documentation = "https://pthom.github.io/fiatlight/"
